--- a/app.css
+++ b/app.css
@@ -1,53 +1,105 @@
-main{
+main {
   margin: 0 auto;
   width: 80%;
 }
 
-h1{
+h1 {
   text-align: center;
 }
 
-#container{
+#container {
   max-width: 600px;
   margin: 0 auto;
   background-color: #303030;
 }
 
-/* .cascade-waves {
-  perspective: 600px;
-} */
-
 .cascade-waves__tile {
+  position: relative;
   fill: #433e42;
   stroke: #666;
+  z-index: 10;
 }
 
-.active{
+.cascade-waves__tile rect {
+  transition: transform, 0.25s;
+  /* opacity: 0; */
+}
+
+.cascase-waves__root-grid {
+  fill: transparent;
+}
+
+.active {
   z-index: 3;
   transform-style: preserve-3d;
   transition: fill .6s;
   
-  animation-name: glow;
-  animation-duration: .6s;
+  /* animation-name: spin; */
+  animation-name: colors, beat;
+  animation-duration: .4s;
   animation-timing-function: ease-in-out;
 }
 
-@keyframes glow {
+.hovered {
+  z-index: 99;
+}
+
+@keyframes colors {
   0% {
     stroke: #666;
-    transform: rotateX(0);
     fill: #433e42;
   }
 
   50% {
     stroke: #cd91ff;
-    transform: rotateX(90);
     fill: #ac1bfa;
   }
 
   100% {
     stroke: #666;
-    transform: rotateX(180deg);
     fill: #433e42;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateX(0);
+  }
+
+  100% {
+    transform: rotateX(180deg);
+  }
+}
+
+@keyframes beat {
+  0% {
+    transform: scale(1);
+  }
+
+  20% {
+    transform: scale(0.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes inverse-beat {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+
+  10% {
+    transform: scale(1);
+  }
+
+  99.9% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
   }
 }
