--- a/scss/00-abstracts/variables/_color.scss
+++ b/scss/00-abstracts/variables/_color.scss
@@ -36,6 +36,7 @@ $color-gray: #3F3F3F;
     $color-dark-gray: #252326;
     $color-dark-gray-2: #303030;
     $color-light-gray: #584c5c;
+    $color-light-gray2: #666;
 
     $color-primary: $color-purple-2;
     $color-secondary: $color-blue-1;
