--- a/scss/01-components/containers/_board.scss
+++ b/scss/01-components/containers/_board.scss
@@ -8,7 +8,7 @@
     // fill: $color-dark-gray;
     // stroke: $color-light-gray;
     fill: $color-gray-v2  ;
-    stroke: $color-light-gray;
+    stroke: $color-light-gray2;
     z-index: 10;
  
     rect {
