--- a/scss/00-abstracts/variables/_inputs.scss
+++ b/scss/00-abstracts/variables/_inputs.scss
@@ -3,34 +3,34 @@
 //////////////////////////////////////////////////////////////////
 $radiobox-width: 18px;
 $checkbox-width: 22px;
-$checkbox-tick-base: 1.6;
+$checkbox-tick-base: 1.8;
 $checkbox-aspect-ratio: math.div(($checkbox-tick-base * 1.8), $checkbox-tick-base);
 
 
 //////////////////////////////////////////////////////////////////
 // INPUT RANGE
 //////////////////////////////////////////////////////////////////
-$track-color: #eceff1 !default;
-$thumb-color: #607d8b !default;
+$track-color: $color-secondary !default;
+$thumb-color: $color-white !default;
 
-$thumb-radius: 12px !default;
-$thumb-height: 24px !default;
-$thumb-width: 24px !default;
+$thumb-radius: 11px !default;
+$thumb-height: 18px !default;
+$thumb-width: 18px !default;
 $thumb-shadow-size: 4px !default;
 $thumb-shadow-blur: 4px !default;
-$thumb-shadow-color: rgba(0, 0, 0, .2) !default;
-$thumb-border-width: 2px !default;
-$thumb-border-color: #eceff1 !default;
+$thumb-shadow-color: rgba($color-primary, .2) !default;
+$thumb-border-width: 3.5px !default;
+$thumb-border-color: $color-primary !default;
 
 $track-width: 100% !default;
-$track-height: 8px !default;
-$track-shadow-size: 1px !default;
-$track-shadow-blur: 1px !default;
-$track-shadow-color: rgba(0, 0, 0, .2) !default;
-$track-border-width: 2px !default;
-$track-border-color: #cfd8dc !default;
+$track-height: 0 !default;
+$track-shadow-size: 0 !default;
+$track-shadow-blur: 0 !default;
+$track-shadow-color: rgba($color-primary, .2) !default;
+$track-border-width: 1.5px !default;
+$track-border-color: transparent !default;
 
-$track-radius: 5px !default;
+$track-radius: 0 !default;
 $contrast: 5% !default;
 
 $ie-bottom-track-color: darken($track-color, $contrast) !default;
