--- a/scss/01-components/inputs/_input-range.scss
+++ b/scss/01-components/inputs/_input-range.scss
@@ -1,7 +1,6 @@
 [type='range'] {
   -webkit-appearance: none;
   background: transparent;
-  margin: math.div($thumb-height, 2) 0;
   width: $track-width;
 
   &::-moz-focus-outer {
@@ -26,7 +25,7 @@
 
   &::-webkit-slider-runnable-track {
     @include track;
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+    //@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
     background: $track-color;
     border: $track-border-width solid $track-border-color;
     border-radius: $track-radius;
@@ -39,7 +38,7 @@
   }
 
   &::-moz-range-track {
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+    //@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
     @include track;
     background: $track-color;
     border: $track-border-width solid $track-border-color;
@@ -60,14 +59,14 @@
   }
 
   &::-ms-fill-lower {
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+    //@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
     background: $ie-bottom-track-color;
     border: $track-border-width solid $track-border-color;
     border-radius: ($track-radius * 2);
   }
 
   &::-ms-fill-upper {
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+    //@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
     background: $track-color;
     border: $track-border-width solid $track-border-color;
     border-radius: ($track-radius * 2);
