--- a/scss/02-layouts/forms/_form.scss
+++ b/scss/02-layouts/forms/_form.scss
@@ -1,5 +1,5 @@
 fieldset {
-  margin-bottom: calc-rem(58px);
+  margin-bottom: calc-rem(52px);
 }
 
 legend {
@@ -40,6 +40,7 @@ form {
     &-range {
       display: flex;
       align-items: center;
+      margin: calc-rem(16px) 0;
 
       > * {
         flex: 1;
