--- a/scss/02-layouts/grid/_container.scss
+++ b/scss/02-layouts/grid/_container.scss
@@ -1,6 +1,6 @@
 .container {
     @include make-container();
-    max-width: get-variable("xl", $container-max-widths);
+    max-width: get-variable("xxl", $container-max-widths);
 }
 
 .container-fluid {
