#011221 remove unnecessary files

--- a/scss/02-layouts/_layout.scss
+++ b/scss/02-layouts/_layout.scss
@@ -8,18 +8,11 @@
     "base/section";
 
 @import 
-    "forms/form",
-    "forms/filters";
+    "forms/form";
 
 @import 
     "grid/container",
     "grid/grid";
-
-@import 
-    "navigation/nav-aside",
-    "navigation/nav-primary",
-    "navigation/nav-language",
-    "navigation/nav-footer";
 
 @import
     "sections/playground";
