--- a/scss/05-lib/bootstrap/bootstrap.scss
+++ b/scss/05-lib/bootstrap/bootstrap.scss
@@ -10,7 +10,7 @@
 @import "functions";
 @import "variables";
 @import "mixins";
-@import "utilities";
+// @import "utilities";
 
 // Layout & components
 // @import "root";
@@ -37,7 +37,7 @@
 // @import "list-group";
 // @import "close";
 // @import "toasts";
-@import "modal";
+// @import "modal";
 // @import "tooltip";
 // @import "popover";
 // @import "carousel";
