#301221 remove bootstrap files, remove grid

--- a/scss/02-layouts/_layout.scss
+++ b/scss/02-layouts/_layout.scss
@@ -11,8 +11,7 @@
     "forms/form";
 
 @import 
-    "grid/container",
-    "grid/grid";
+    "grid/container";
 
 @import
     "sections/playground";
